Usando Switch e rebase

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     </div>
     <ul id="listaFilmes">
     </ul>
+    <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo tenetur eaque hic fuga id quod ipsum inventore accusamus voluptas, explicabo nemo sit mollitia quis dolorem ad provident nam ex ratione?
+    </p>
 </div>
 <script src="script.js"></script>
 </body>
